Bug 1315937 - Add basic custom menu to CustomTabsActivity r=sebastian
Besides custom-menu-items from 3-rd party apps, we designed a custom
menu which always has
  * buttons for Forward, Reload
  * One menu item for 'Open by Firefox'
  * a footer 'Powered by Firefox'

This patch adds a button as an anchor to standard menu. Once user click
it, to show a custom menu (GeckoPopupMenu) base on the anchor.

In current design, there is only one style for menu, regardless of Dark
or Light theme.

MozReview-Commit-ID: 5RMiGDlxLTU

UltraBlame original commit: 4391ccb1488ed55a3bbf0d47cab6d09330fc2608

--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -2933,6 +2933,36 @@ string
 name
 =
 "
+custom_tabs_menu_item_open_in
+"
+>
+&
+custom_tabs_menu_item_open_in
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
+custom_tabs_menu_footer
+"
+>
+&
+custom_tabs_menu_footer
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
 pref_activity_stream
 "
 >
