--- a/browser/base/content/test/tabs/browser.ini
+++ b/browser/base/content/test/tabs/browser.ini
@@ -75,6 +75,26 @@ browser_navigatePinnedTab
 js
 ]
 [
+browser_new_web_tab_in_file_process_pref
+.
+js
+]
+skip
+-
+if
+=
+!
+e10s
+#
+Pref
+and
+test
+only
+relevant
+for
+e10s
+.
+[
 browser_opened_file_tab_navigated_to_web
 .
 js
