Bug 1343562 - Look for omni.ja from multiple sources; r=nalexander
Look for omni.ja to copy from in dist/fennec and in dist/fennec/assets,
but throw an error if we find multiple copies of omni.ja that are
potentially conflicting.

UltraBlame original commit: cc5e2abed8085d2947079ed773cba45af01403ce

--- a/mobile/android/gradle/with_gecko_binaries.gradle
+++ b/mobile/android/gradle/with_gecko_binaries.gradle
@@ -568,15 +568,46 @@ dist
 /
 fennec
 /
-assets
-"
-)
-{
-include
-'
 omni
 .
 ja
+"
+"
+{
+topobjdir
+}
+/
+dist
+/
+fennec
+/
+assets
+/
+omni
+.
+ja
+"
+)
+{
+/
+/
+Throw
+an
+exception
+if
+we
+find
+multiple
+potentially
+conflicting
+omni
+.
+ja
+files
+.
+duplicatesStrategy
+'
+fail
 '
 }
 }
