Bug 1341343 - Test for overwriting alt-data r=michal MozReview-Commit-ID: HljsfPNtN42
UltraBlame original commit: 7ea73c4bb75a462866ba49c22bd436b332696e59

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -2663,6 +2663,13 @@ data_stream
 js
 ]
 [
+test_alt
+-
+data_overwrite
+.
+js
+]
+[
 test_cache
 -
 control_request
@@ -2711,11 +2718,6 @@ js
 ]
 [
 test_channel_priority
-.
-js
-]
-[
-test_bug1312774_http1
 .
 js
 ]
