Backed out changeset b43d8eb6e6c9 (bug 1335691) for build bustage. r=backout on a CLOSED TREE
UltraBlame original commit: 13b05e58f420c64c047ea14cc74c467c632f11a1

--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -716,6 +716,20 @@ js
 [
 browser_inspector_highlighter
 -
+rect_01
+.
+js
+]
+[
+browser_inspector_highlighter
+-
+rect_02
+.
+js
+]
+[
+browser_inspector_highlighter
+-
 rulers_01
 .
 js
