Bug 1344889 - Add necessary dependendencies for generated libvpx assembly. r=mshal
UltraBlame original commit: 3fe0bc866f1462314983e82aa4e0fbfc7546cd89

--- a/media/libvpx/Makefile.in
+++ b/media/libvpx/Makefile.in
@@ -61,6 +61,16 @@ libvpx
 assembler
 config
 .
+include
+(
+topsrcdir
+)
+/
+config
+/
+rules
+.
+mk
 ifdef
 VPX_ARM_ASM
 ifdef
@@ -166,10 +176,47 @@ asm
 ASM_OFFSETS
 )
 (
+call
+mkdir_deps
+libvpx
+/
+vpx_dsp
+/
+arm
+)
+(
 VPX_AS_CONVERSION
 )
 <
 <
 >
+(
+addsuffix
+.
+(
+OBJ_SUFFIX
+)
+idct4x4_add_neon
+.
+asm
+idct8x8_add_neon
+.
+asm
+idct16x16_add_neon
+.
+asm
+)
+:
+libvpx
+/
+vpx_dsp
+/
+arm
+/
+idct_neon
+.
+asm
+.
+S
 endif
 endif
