Bug 1345403 part 5 - Test video suspend canceling; r=jwwang
MozReview-Commit-ID: 99IDqpwuRIf

UltraBlame original commit: be9cfb690427c87cc94352b9848c099a99ffa112

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10689,6 +10689,48 @@ bug
 1232305
 )
 [
+test_background_video_cancel_suspend_taint
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1346705
+tags
+=
+suspend
+[
+test_background_video_cancel_suspend_visible
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1346705
+tags
+=
+suspend
+[
 test_background_video_no_suspend_disabled
 .
 html
