Bug 1346120 part 6 - Test drawImage gets a non-single-color image from suspended video; r=jwwang
Once part 4 is applied, a suspend video element won't be rendered anymore, so that the video element keeps the last decoded-frame.
By this way, drawing a suspended video element to a canvas should get something that is not single-color.

MozReview-Commit-ID: J6dsZIvtO

UltraBlame original commit: e924204de04084739434958143a0b7e9a78cbd23

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10852,6 +10852,27 @@ tags
 =
 suspend
 [
+test_background_video_drawimage_with_suspended_video
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1346705
+tags
+=
+suspend
+[
 test_temporary_file_blob_video_plays
 .
 html
