--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10779,6 +10779,27 @@ tags
 =
 suspend
 [
+test_background_video_no_suspend_not_in_tree
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1346705
+tags
+=
+suspend
+[
 test_background_video_suspend
 .
 html
