Bug 1338871 - Enable Talos tests for linux64-stylo builds r=dustin
UltraBlame original commit: b463b127b85a2c5202299449edf80794a81cb2fb

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -6424,6 +6424,23 @@ on
 -
 projects
 :
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
+:
 [
 '
 mozilla
@@ -6541,6 +6558,23 @@ on
 -
 projects
 :
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
+:
 [
 '
 mozilla
@@ -6658,6 +6692,23 @@ on
 -
 projects
 :
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
+:
 [
 '
 mozilla
@@ -6769,11 +6820,35 @@ T
 (
 g2
 )
+max
+-
+run
+-
+time
+:
+3600
 run
 -
 on
 -
 projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
 :
 [
 '
@@ -6803,13 +6878,6 @@ autoland
 try
 '
 ]
-max
--
-run
--
-time
-:
-3600
 mozharness
 :
 script
@@ -6892,6 +6960,23 @@ on
 -
 projects
 :
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
+:
 [
 '
 mozilla
@@ -7008,6 +7093,23 @@ run
 on
 -
 projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
 :
 [
 '
@@ -7126,6 +7228,23 @@ on
 -
 projects
 :
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
+:
 [
 '
 mozilla
@@ -7243,6 +7362,23 @@ on
 -
 projects
 :
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
+:
 [
 '
 mozilla
@@ -7359,6 +7495,23 @@ run
 on
 -
 projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+stylo
+/
+.
+*
+:
+[
+]
+default
 :
 [
 '
