Bug 1300671 - set firstPartyDomain on about: pages. r=smaug
When we load about:blank in a remote tab, it will have
LOAD_FLAGS_DISALLOW_INHERIT_PRINCIPAL flag set, which will make
NullPrinicipal as its document principal. So we add
NULL_PRINCIPAL_FIRST_PARTY_DOMAIN as its firstPartyDomain.

So when we load data:, or javascript: URI in a remote tab, it will inherit the
principal from about:blank, hence also inherit the origin attributes.

There are also some about: pages will use codebase principal, so we also
set ABOUT_URI_FIRST_PARTY_DOMAIN as firstPartyDomain on their
principals.

UltraBlame original commit: ca31554d93a23aa505034a8a88608cf3014b9f4b

--- a/browser/components/originattributes/test/browser/browser.ini
+++ b/browser/components/originattributes/test/browser/browser.ini
@@ -266,6 +266,16 @@ browser_firstPartyIsolation
 js
 ]
 [
+browser_firstPartyIsolation_aboutPages
+.
+js
+]
+[
+browser_firstPartyIsolation_js_uri
+.
+js
+]
+[
 browser_localStorageIsolation
 .
 js
