Bug 1311347 - Enable eslint of browser/components/sessionstore/. Initial changes by Sourav, updated by Standard8. r=jaws
MozReview-Commit-ID: 4RFxoV8SkIa

UltraBlame original commit: eb4b44b2eb026ce5a4c126a8f6a44af95ca3c7ed

--- a/.eslintignore
+++ b/.eslintignore
@@ -336,14 +336,54 @@ downloads
 /
 *
 *
+#
+Test
+files
+that
+are
+really
+json
+not
+js
+and
+don
+'
+t
+need
+to
+be
+linted
+.
 browser
 /
 components
 /
 sessionstore
 /
-*
-*
+test
+/
+unit
+/
+data
+/
+sessionstore_valid
+.
+js
+browser
+/
+components
+/
+sessionstore
+/
+test
+/
+unit
+/
+data
+/
+sessionstore_invalid
+.
+js
 browser
 /
 components
@@ -1105,6 +1145,14 @@ server
 tests
 /
 unit
+/
+*
+*
+devtools
+/
+shared
+/
+heapsnapshot
 /
 *
 *
