--- a/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
+++ b/toolkit/mozapps/extensions/test/xpcshell/xpcshell-shared.ini
@@ -1301,6 +1301,30 @@ test_distribution
 js
 ]
 [
+test_dss
+.
+js
+]
+#
+Bug
+676992
+:
+test
+consistently
+fails
+on
+Android
+fail
+-
+if
+=
+os
+=
+=
+"
+android
+"
+[
 test_duplicateplugins
 .
 js
