--- a/docshell/test/mochitest.ini
+++ b/docshell/test/mochitest.ini
@@ -116,6 +116,9 @@ html
 file_bug728939
 .
 html
+file_bug1151421
+.
+html
 file_pushState_after_document_open
 .
 html
@@ -412,6 +415,11 @@ html
 ]
 [
 test_bug1121701
+.
+html
+]
+[
+test_bug1151421
 .
 html
 ]
