Bug 1344926 - add a regression test to make sure themes are persisted across windows using the Theming API. r=mossop
MozReview-Commit-ID: BYatMSNBLiX

UltraBlame original commit: 5cbd00cc8a957c2216272bf53639a953c71b7539

--- a/toolkit/components/extensions/test/browser/browser.ini
+++ b/toolkit/components/extensions/test/browser/browser.ini
@@ -1,4 +1,14 @@
 [
+DEFAULT
+]
+support
+-
+files
+=
+head
+.
+js
+[
 browser_ext_themes_chromeparity
 .
 js
@@ -10,6 +20,11 @@ js
 ]
 [
 browser_ext_themes_lwtsupport
+.
+js
+]
+[
+browser_ext_themes_persistence
 .
 js
 ]
