Bug 1333255: use normal old functions to load tasks; r=jonasfj
Instead of using a class's static method, use a simple function, specified by
the `loader` key.

MozReview-Commit-ID: IeOl9qiSCXf

UltraBlame original commit: 4423c6f583458b1be1fda491bc92d5bba204c0f4

--- a/taskcluster/ci/android-stuff/kind.yml
+++ b/taskcluster/ci/android-stuff/kind.yml
@@ -93,7 +93,7 @@ a
 better
 way
 .
-implementation
+loader
 :
 taskgraph
 .
@@ -101,7 +101,7 @@ task
 .
 transform
 :
-TransformTask
+load_tasks
 transforms
 :
 -
