--- a/taskcluster/ci/docker-image/kind.yml
+++ b/taskcluster/ci/docker-image/kind.yml
@@ -53,17 +53,15 @@ MPL
 0
 /
 .
-implementation
+loader
 :
-'
 taskgraph
 .
 task
 .
 docker_image
 :
-DockerImageTask
-'
+load_tasks
 images_path
 :
 '
