--- a/taskcluster/ci/upload-symbols/kind.yml
+++ b/taskcluster/ci/upload-symbols/kind.yml
@@ -53,7 +53,7 @@ MPL
 0
 /
 .
-implementation
+loader
 :
 taskgraph
 .
@@ -61,7 +61,7 @@ task
 .
 post_build
 :
-PostBuildTask
+load_tasks
 transforms
 :
 -
