Bug 1333255: use transforms to make docker image tasks, too; r=jonasfj
MozReview-Commit-ID: Eke3TjLbEfE

UltraBlame original commit: c7eb35b0b522dbcce8ef86a859b7b2bad4b82160

--- a/taskcluster/ci/docker-image/kind.yml
+++ b/taskcluster/ci/docker-image/kind.yml
@@ -62,22 +62,24 @@ task
 docker_image
 :
 load_tasks
-images_path
+transforms
 :
-'
+-
+taskgraph
 .
+transforms
 .
-/
+docker_image
+:
+transforms
+-
+taskgraph
 .
+transforms
 .
-/
-.
-.
-/
-taskcluster
-/
-docker
-'
+task
+:
+transforms
 #
 make
 a
@@ -151,33 +153,63 @@ the
 target
 task
 graph
-images
+jobs
 :
 desktop
 -
 test
 :
+symbol
+:
+I
+(
 dt
+)
 desktop1604
 -
 test
 :
+symbol
+:
+I
+(
 dt16t
+)
 desktop
 -
 build
 :
+symbol
+:
+I
+(
 db
+)
 tester
 :
+symbol
+:
+I
+(
 tst
+)
 lint
 :
+symbol
+:
+I
+(
 lnt
+)
 android
 -
 gradle
 -
 build
 :
+symbol
+:
+I
+(
 agb
+)
