Bug 1333255: handle when.files-changed at the job level; r=jonasfj
MozReview-Commit-ID: AbJcXu22dNP

UltraBlame original commit: 90bee55f9797d5be2cdfafa56f97b320eb977088

--- a/taskcluster/ci/android-stuff/kind.yml
+++ b/taskcluster/ci/android-stuff/kind.yml
@@ -473,12 +473,14 @@ tooltool
 download
 .
 public
-when
+optimizations
 :
+-
+-
 files
 -
 changed
-:
+-
 -
 "
 mobile
@@ -832,12 +834,14 @@ tooltool
 download
 .
 public
-when
+optimizations
 :
+-
+-
 files
 -
 changed
-:
+-
 -
 "
 mobile
@@ -1298,12 +1302,14 @@ tooltool
 download
 .
 public
-when
+optimizations
 :
+-
+-
 files
 -
 changed
-:
+-
 -
 "
 mobile
@@ -1722,12 +1728,14 @@ tooltool
 download
 .
 public
-when
+optimizations
 :
+-
+-
 files
 -
 changed
-:
+-
 -
 "
 mobile
@@ -2095,12 +2103,14 @@ tooltool
 download
 .
 public
-when
+optimizations
 :
+-
+-
 files
 -
 changed
-:
+-
 -
 "
 mobile
