Bug 1287660 - New implementation of nsIHandlerService for the JSON backend. r=Paolo
MozReview-Commit-ID: 46fQq1Pr8bT

UltraBlame original commit: 4548e84389d170799d3fc873fd69edefd668b6f7

--- a/mobile/android/installer/package-manifest.in
+++ b/mobile/android/installer/package-manifest.in
@@ -1993,6 +1993,24 @@ BINPATH
 components
 /
 nsHandlerService
+-
+json
+.
+manifest
+BINPATH
+/
+components
+/
+nsHandlerService
+-
+json
+.
+js
+BINPATH
+/
+components
+/
+nsHandlerService
 .
 manifest
 BINPATH
