--- a/uriloader/exthandler/tests/unit/xpcshell.ini
+++ b/uriloader/exthandler/tests/unit/xpcshell.ini
@@ -15,6 +15,18 @@ Bug
 -
 Intermittent
 failures
+firefox
+-
+appdir
+=
+browser
+support
+-
+files
+=
+common_test_handlerService
+.
+js
 [
 test_getTypeFromExtension_ext_to_type_mapping
 .
@@ -59,6 +71,30 @@ os
 "
 android
 "
+[
+test_handlerService_json
+.
+js
+]
+support
+-
+files
+=
+handlers
+.
+json
+[
+test_handlerService_rdf
+.
+js
+]
+support
+-
+files
+=
+mimeTypes
+.
+rdf
 [
 test_punycodeURIs
 .
