--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -2831,6 +2831,24 @@ RESPATH
 components
 /
 nsHandlerService
+-
+json
+.
+manifest
+RESPATH
+/
+components
+/
+nsHandlerService
+-
+json
+.
+js
+RESPATH
+/
+components
+/
+nsHandlerService
 .
 manifest
 RESPATH
