Bug 1347269 - Increase taskcluster instance size for linux twitch tests. r=dustin
This attempts to address intermittent twitch test failures on Linux by having
the tests run on beefier hardware. Bug 1344961 shows a number of failures
where tests timeout before page loading is complete, the hope here is that
more powerful hardware speed up these load times.

MozReview-Commit-ID: 2yBQvKS8Xlh

UltraBlame original commit: e01080e7946e92850ee4218978f8dc43a5df36f3

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -801,6 +801,24 @@ tests
 e10s
 :
 false
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux
+.
+*
+:
+xlarge
+default
+:
+default
 tier
 :
 2
