Bug 1346463: Disable test on windows 8 for now. r=gerald
Issue tracked in bug 1347101

MozReview-Commit-ID: 8YaMr3p8aMk

UltraBlame original commit: 110bf387f3901b3f95dd89feca44c4529fa92225

--- a/dom/media/mediasource/test/mochitest.ini
+++ b/dom/media/mediasource/test/mochitest.ini
@@ -2036,6 +2036,7 @@ win
 "
 &
 &
+(
 os_version
 =
 =
@@ -2044,6 +2045,17 @@ os_version
 .
 1
 "
+|
+|
+os_version
+=
+=
+"
+6
+.
+2
+"
+)
 )
 |
 |
@@ -2066,6 +2078,10 @@ android
 2
 .
 3
+win8
+see
+bug
+1347101
 [
 test_SeekTwice_mp4
 .
