--- a/dom/media/mediasource/test/mochitest.ini
+++ b/dom/media/mediasource/test/mochitest.ini
@@ -972,6 +972,71 @@ android
 .
 3
 [
+test_ChangeWhileWaitingOnMissingData_mp4
+.
+html
+]
+skip
+-
+if
+=
+(
+(
+os
+=
+=
+"
+win
+"
+&
+&
+(
+os_version
+=
+=
+"
+5
+.
+1
+"
+|
+|
+os_version
+=
+=
+"
+6
+.
+2
+"
+)
+)
+|
+|
+(
+toolkit
+=
+=
+'
+android
+'
+)
+)
+#
+Not
+supported
+on
+xp
+and
+android
+2
+.
+3
+win8
+see
+bug
+1347101
+[
 test_DrainOnMissingData_mp4
 .
 html
