Bug 1346967: Generate metadata for all three ISimpleDOM interfaces via a single combined run of MIDL; r=tbsaunde
MozReview-Commit-ID: DGgXSbISujv

UltraBlame original commit: 0104334a6654e0c9601b6b4f7b58f085577fdc6a

--- a/accessible/interfaces/msaa/Makefile.in
+++ b/accessible/interfaces/msaa/Makefile.in
@@ -67,45 +67,21 @@ dlldata
 .
 c
 \
-ISimpleDOMNode
+ISimpleDOM
 .
 h
 \
-ISimpleDOMNode_p
+ISimpleDOM_i
 .
 c
 \
-ISimpleDOMNode_i
+ISimpleDOM_p
 .
 c
 \
-ISimpleDOMNode
+ISimpleDOM
 .
 tlb
-\
-ISimpleDOMDocument
-.
-h
-\
-ISimpleDOMDocument_p
-.
-c
-\
-ISimpleDOMDocument_i
-.
-c
-\
-ISimpleDOMText
-.
-h
-\
-ISimpleDOMText_p
-.
-c
-\
-ISimpleDOMText_i
-.
-c
 \
 (
 NULL
@@ -117,6 +93,10 @@ MIDL_GENERATED_FILES
 done_gen
 done_gen
 :
+ISimpleDOM
+.
+idl
+\
 ISimpleDOMNode
 .
 idl
@@ -140,42 +120,14 @@ I
 srcdir
 )
 -
-Oicf
-(
-srcdir
-)
-/
-ISimpleDOMNode
-.
-idl
-(
-MIDL
-)
-(
-MIDL_FLAGS
-)
+robust
 -
 Oicf
 (
 srcdir
 )
 /
-ISimpleDOMDocument
-.
-idl
-(
-MIDL
-)
-(
-MIDL_FLAGS
-)
--
-Oicf
-(
-srcdir
-)
-/
-ISimpleDOMText
+ISimpleDOM
 .
 idl
 touch
@@ -215,27 +167,11 @@ midl_exports
 :
 =
 \
-ISimpleDOMDocument
+ISimpleDOM
 .
 h
 \
-ISimpleDOMDocument_i
-.
-c
-\
-ISimpleDOMNode
-.
-h
-\
-ISimpleDOMNode_i
-.
-c
-\
-ISimpleDOMText
-.
-h
-\
-ISimpleDOMText_i
+ISimpleDOM_i
 .
 c
 \
