Bug 1338038 - Intermittent browser/base/content/test/webrtc/browser_devices_get_user_media_screen.js. r=gbrown
MozReview-Commit-ID: GX4VNZpgIaR

UltraBlame original commit: a37f9e1cbc8fb184e2edd52d55e719bbecd7e419

--- a/browser/base/content/test/webrtc/browser.ini
+++ b/browser/base/content/test/webrtc/browser.ini
@@ -76,6 +76,16 @@ os
 "
 linux
 "
+)
+|
+|
+(
+os
+=
+=
+"
+win
+"
 &
 &
 !
@@ -93,6 +103,13 @@ bug
 for
 linux
 opt
+bug
+1338038
+for
+windows
+and
+linux
+debug
 [
 browser_devices_get_user_media_tear_off_tab
 .
