--- a/extensions/cookie/test/browser.ini
+++ b/extensions/cookie/test/browser.ini
@@ -6,3 +6,20 @@ browser_test_favicon
 .
 js
 ]
+[
+browser_permmgr_sync
+.
+js
+]
+skip
+-
+if
+=
+!
+e10s
+#
+This
+tests
+e10s
+specific
+behavior
