bug 1344321 - enable run-on-projects for nightlies. r=dustin a=release
This patch enables `run-on-projects` to work appropriately for
nightly builds and tests.  Initially, we were setting an empty
`run-on-projects` for nightly `build_platform`s, then explicitly
targeting the platforms in nightly-specific `target_task_method`s.

Instead, this patch enables nightlies to `run-on-projects` everywhere,
but governs the use of nightlies by either the `include_nightly`
parameter, or the `--include-nightly` try option.  This lets us filter
nightly-related `target_task_method`s against `run-on-projects` without
losing all nightly tasks.

Then, enable spidermonkey tests by removing optimization from beta and
release.  This patch also enables everything then disables specific
tasks, rather than disabling everything and enabling specific tasks.
Since we're beginning with a `filter_for_project` call, we should be
able to reduce these if blocks to zero over time, if desired.

MozReview-Commit-ID: A9tolynaChF

UltraBlame original commit: 82593afdf85d100060154952a7e18702098becd6

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -801,24 +801,6 @@ tests
 e10s
 :
 false
-instance
--
-size
-:
-by
--
-test
--
-platform
-:
-linux
-.
-*
-:
-xlarge
-default
-:
-default
 tier
 :
 2
@@ -3162,6 +3144,22 @@ test
 platform
 :
 linux64
+/
+opt
+:
+[
+'
+mozilla
+-
+central
+'
+'
+try
+'
+]
+linux64
+-
+nightly
 /
 opt
 :
