Bug 1347241 - Enable linux64-ccov coverage collection for common tests set; r=gmierz,jmaher
MozReview-Commit-ID: FLyjCwMGb6L

UltraBlame original commit: dd772ad610d1149d54b93eb3920bfcde109db4f1

--- a/devtools/client/memory/test/browser/browser.ini
+++ b/devtools/client/memory/test/browser/browser.ini
@@ -91,16 +91,40 @@ browser_memory_dominator_trees_01
 .
 js
 ]
+skip
+-
+if
+=
+coverage
+#
+bug
+1347244
 [
 browser_memory_dominator_trees_02
 .
 js
 ]
+skip
+-
+if
+=
+coverage
+#
+bug
+1347244
 [
 browser_memory_filter_01
 .
 js
 ]
+skip
+-
+if
+=
+coverage
+#
+bug
+1347244
 [
 browser_memory_individuals_01
 .
