--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -417,9 +417,29 @@ coverage
 tests
 :
 -
+cppunit
+-
 crashtest
 -
+firefox
+-
+ui
+-
+functional
+-
+local
+-
+firefox
+-
+ui
+-
+functional
+-
+remote
+-
 gtest
+-
+jittest
 -
 jsreftest
 -
@@ -429,9 +449,21 @@ mochitest
 -
 mochitest
 -
+a11y
+-
+mochitest
+-
 browser
 -
 chrome
+-
+mochitest
+-
+chrome
+-
+mochitest
+-
+clipboard
 -
 mochitest
 -
@@ -439,7 +471,29 @@ devtools
 -
 chrome
 -
+mochitest
+-
+gpu
+-
+mochitest
+-
+jetpack
+-
+mochitest
+-
+media
+-
+mochitest
+-
+webgl
+-
 reftest
+-
+reftest
+-
+no
+-
+accel
 -
 web
 -
