--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -83,6 +83,26 @@ tc
 (
 Cpp
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 e10s
 :
 false
@@ -1140,6 +1160,26 @@ en
 -
 US
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 max
 -
 run
@@ -1167,6 +1207,24 @@ desktop1604
 test
 "
 }
+e10s
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+false
+default
+:
+both
 mozharness
 :
 script
@@ -1245,6 +1303,26 @@ en
 -
 US
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 max
 -
 run
@@ -1272,6 +1350,24 @@ desktop1604
 test
 "
 }
+e10s
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+false
+default
+:
+both
 mozharness
 :
 script
@@ -1480,6 +1576,26 @@ tc
 (
 Jit
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 e10s
 :
 false
@@ -2652,6 +2768,26 @@ M
 (
 a11y
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 loopback
 -
 video
@@ -3175,22 +3311,6 @@ central
 try
 '
 ]
-linux64
--
-nightly
-/
-opt
-:
-[
-'
-mozilla
--
-central
-'
-'
-try
-'
-]
 default
 :
 [
@@ -3346,6 +3466,13 @@ platform
 android
 .
 *
+:
+xlarge
+linux64
+-
+ccov
+/
+opt
 :
 xlarge
 default
@@ -3600,6 +3727,13 @@ macosx64
 debug
 :
 true
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 both
@@ -4137,6 +4271,26 @@ M
 (
 gpu
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 loopback
 -
 video
@@ -4213,6 +4367,13 @@ macosx64
 opt
 :
 both
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 true
@@ -4401,6 +4562,26 @@ M
 (
 JP
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 loopback
 -
 video
@@ -4615,6 +4796,13 @@ macosx64
 debug
 :
 true
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 both
@@ -4631,6 +4819,13 @@ platform
 android
 .
 *
+:
+xlarge
+linux64
+-
+ccov
+/
+opt
 :
 xlarge
 default
@@ -5090,6 +5285,13 @@ macosx
 *
 :
 true
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 both
@@ -5131,6 +5333,13 @@ platform
 android
 .
 *
+:
+xlarge
+linux64
+-
+ccov
+/
+opt
 :
 xlarge
 default
@@ -5928,6 +6137,26 @@ R
 (
 Ru
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 docker
 -
 image
@@ -5997,6 +6226,24 @@ macosx
 default
 :
 8
+e10s
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+false
+default
+:
+both
 mozharness
 :
 script
