Bug 1319070 - Test matching against the principal. r=kmag
MozReview-Commit-ID: LjuiizBh1OK

UltraBlame original commit: 8c704b823d38f479ad228c585439ae41100be166

--- a/toolkit/components/extensions/test/mochitest/chrome.ini
+++ b/toolkit/components/extensions/test/mochitest/chrome.ini
@@ -100,6 +100,11 @@ test_chrome_ext_eventpage_warning
 html
 ]
 [
+test_chrome_ext_contentscript_data_uri
+.
+html
+]
+[
 test_chrome_ext_contentscript_unrecognizedprop_warning
 .
 html
