Bug 1336355 - Open webapps in new activity. r=sebastian
UltraBlame original commit: 4168b9960850ee3feed64836c12df358229720d3

--- a/mobile/android/base/AndroidManifest.xml.in
+++ b/mobile/android/base/AndroidManifest.xml.in
@@ -537,6 +537,13 @@ taskAffinity
 "
 android
 :
+exported
+=
+"
+true
+"
+android
+:
 excludeFromRecents
 =
 "
@@ -2991,6 +2998,38 @@ GeckoCustomTabs
 >
 #
 endif
+<
+activity
+android
+:
+name
+=
+"
+org
+.
+mozilla
+.
+gecko
+.
+webapps
+.
+WebAppActivity
+"
+android
+:
+theme
+=
+"
+style
+/
+Theme
+.
+AppCompat
+.
+NoActionBar
+"
+/
+>
 <
 !
 -
