Bug 1300201 - Switch Fennec to use list.json. r=sebastian,r=flod
MozReview-Commit-ID: JNtFSCOQhJ

UltraBlame original commit: 3aede4b1edbfeb2536912fd27e0a9fdf521c0889

--- a/mobile/locales/Makefile.in
+++ b/mobile/locales/Makefile.in
@@ -688,31 +688,14 @@ array
 =
 \
 (
-wildcard
-(
-LOCALE_SRCDIR
-)
-/
-searchplugins
-/
-list
-.
-txt
-)
-\
-(
 srcdir
 )
 /
-en
--
-US
-/
-searchplugins
+search
 /
 list
 .
-txt
+json
 \
 (
 NULL
@@ -1465,23 +1448,26 @@ plugin
 #
 #
 SEARCH_PLUGINS
+:
 =
 (
 shell
-cat
 (
-plugin_file
+call
+py_action
+output_searchplugins_list
+(
+srcdir
 )
+/
+search
+/
+list
+.
+json
+(
+AB_CD
 )
-SEARCH_PLUGINS
-:
-=
-(
-subst
-:
-hidden
-(
-SEARCH_PLUGINS
 )
 )
 (
@@ -1605,6 +1591,31 @@ xml
 '
 >
 >
+printf
+'
+\
+n
+locale
+/
+(
+AB_CD
+)
+/
+browser
+/
+searchplugins
+/
+list
+.
+json
+(
+list
+.
+json
+)
+'
+>
+>
 echo
 >
 >
@@ -1722,6 +1733,32 @@ preqs
 (
 call
 py_action
+generate_searchjson
+(
+srcdir
+)
+/
+search
+/
+list
+.
+json
+(
+AB_CD
+)
+(
+tgt
+-
+gendir
+)
+/
+list
+.
+json
+)
+(
+call
+py_action
 jar_maker
 \
 (
@@ -1756,6 +1793,14 @@ LOCALE_SRCDIR
 )
 /
 searchplugins
+\
+-
+s
+(
+tgt
+-
+gendir
+)
 \
 (
 MAKE_JARS_FLAGS
