--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -2093,6 +2093,31 @@ contentSearchUI
 .
 js
 [
+browser_selectpopup
+.
+js
+]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+#
+Bug
+1329991
+-
+test
+fails
+intermittently
+on
+Linux
+builds
+[
 browser_selectTabAtIndex
 .
 js
