--- a/browser/base/content/test/forms/browser.ini
+++ b/browser/base/content/test/forms/browser.ini
@@ -38,3 +38,23 @@ browser_selectpopup_colors
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+#
+Bug
+1329991
+-
+test
+fails
+intermittently
+on
+Linux
+builds
