--- a/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
@@ -302,6 +302,11 @@ browser_webconsole_stacktrace_location_scratchpad_link
 js
 ]
 [
+browser_webconsole_string
+.
+js
+]
+[
 browser_webconsole_timestamps
 .
 js
