Bug 1334388 - Disable intermittent dom/u2f/tests/test_multiple_keys.html. r=keeler
This change disables the test dom/u2f/tests/test_multiple_keys.html, as it
is being prompted by some mis-use of the IPC system. All IPC for this component,
U2F, is being reworked currently in Bug 1323339, so fixing this really falls to
that bug. Bug 1347374 is filed to re-enable this test after the IPC rework.

MozReview-Commit-ID: BQCk7Muz53c

UltraBlame original commit: 91daf808bfcb56aacea4778832ef64438ff2d580

--- a/dom/u2f/tests/mochitest.ini
+++ b/dom/u2f/tests/mochitest.ini
@@ -54,7 +54,7 @@ Feature
 does
 not
 function
-on
+without
 e10s
 (
 Disabled
@@ -144,9 +144,13 @@ test_multiple_keys
 .
 html
 ]
+#
+Disabled
+in
+bug
+1334388
 skip
 -
 if
 =
-!
-e10s
+true
