Bug 1325049 - Fix the global webrtc sharing indicator to work with multiple content processes, r=felipe.
UltraBlame original commit: e4e0318c18c37fc2fdf89cdd7cdf2398af0c7b56

--- a/browser/base/content/test/webrtc/browser.ini
+++ b/browser/base/content/test/webrtc/browser.ini
@@ -53,6 +53,24 @@ browser_devices_get_user_media_in_frame
 js
 ]
 [
+browser_devices_get_user_media_multi_process
+.
+js
+]
+skip
+-
+if
+=
+(
+e10s
+&
+&
+debug
+)
+#
+bug
+1347625
+[
 browser_devices_get_user_media_screen
 .
 js
