Bug 1345932 - show warning info in about:debugging#workers if multi-e10s is on;r=ochameau
If multi e10s is enabled, service worker debugging is unavailable.
We temporarily disabled the start/push/debug buttons in about:debugging
for all service workers if multi-e10s is on.

A warning section is also displayed on top of about:debugging, letting the
user know that they can set dom.ipc.processCount to 1 in order to force
a single content process and restore debugging capabilities.

MozReview-Commit-ID: IPAlbOq2Hij

UltraBlame original commit: b94a7f7b3980dcc0dfcfbf03d37845e0925d16f4

--- a/devtools/client/aboutdebugging/test/browser.ini
+++ b/devtools/client/aboutdebugging/test/browser.ini
@@ -220,6 +220,11 @@ browser_service_workers_fetch_flag
 js
 ]
 [
+browser_service_workers_multi_content_process
+.
+js
+]
+[
 browser_service_workers_not_compatible
 .
 js
