--- a/devtools/client/aboutdebugging/test/browser.ini
+++ b/devtools/client/aboutdebugging/test/browser.ini
@@ -224,6 +224,20 @@ browser_service_workers_multi_content_process
 .
 js
 ]
+skip
+-
+if
+=
+!
+e10s
+#
+This
+test
+is
+only
+valid
+in
+e10s
 [
 browser_service_workers_not_compatible
 .
