Bug 1336560 - Allow distributions to hide search engines. r=florian
MozReview-Commit-ID: 12lSpSPZTqm

UltraBlame original commit: 01b927dcb4af261acaccc6e591198a5c8b11cf0c

--- a/toolkit/components/search/tests/xpcshell/xpcshell.ini
+++ b/toolkit/components/search/tests/xpcshell/xpcshell.ini
@@ -406,6 +406,11 @@ test_async_distribution
 js
 ]
 [
+test_async_disthidden
+.
+js
+]
+[
 test_async_migration
 .
 js
@@ -438,6 +443,11 @@ tags
 addons
 [
 test_sync_distribution
+.
+js
+]
+[
+test_sync_disthidden
 .
 js
 ]
