--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -406,6 +406,16 @@ browser_ext_sidebarAction_context
 js
 ]
 [
+browser_ext_sidebarAction_tabs
+.
+js
+]
+[
+browser_ext_sidebarAction_windows
+.
+js
+]
+[
 browser_ext_simple
 .
 js
