Bug 1224225: Tests for punycode/unicode in CSP source matching code r=ckerschb,KWierso
MozReview-Commit-ID: 21Mr9ekUvnk

UltraBlame original commit: 6e360ca722711ec7eb7a04e992b9eb1758650e63

--- a/dom/security/test/csp/mochitest.ini
+++ b/dom/security/test/csp/mochitest.ini
@@ -765,6 +765,12 @@ js
 file_upgrade_insecure_navigation
 .
 sjs
+file_punycode_host_src
+.
+sjs
+file_punycode_host_src
+.
+js
 [
 test_base
 -
@@ -1266,6 +1272,11 @@ html
 ]
 [
 test_upgrade_insecure_navigation
+.
+html
+]
+[
+test_punycode_host_src
 .
 html
 ]
