servo: Merge #15993 - Remove rust-encoding from geckolib (from servo:utf84eva); r=Manishearth
It wasn’t used, gecko always passes UTF-8 for parsing stylesheets.

Source-Repo: https://github.com/servo/servo
Source-Revision: f53692cd03e19c30a2a6a3e0775798ed50d481e9

UltraBlame original commit: c679469b5b875be9c9174de840c0f9a7d9ef97d2

--- a/servo/components/style/Cargo.toml
+++ b/servo/components/style/Cargo.toml
@@ -128,6 +128,9 @@ cssparser
 serde
 "
 "
+encoding
+"
+"
 rayon
 /
 unstable
@@ -186,11 +189,18 @@ cssparser
 "
 encoding
 =
+{
+version
+=
 "
 0
 .
 2
 "
+optional
+=
+true
+}
 euclid
 =
 "
