Bug 1333990: Part 1b - Add tests for script precompiler. r=shu
MozReview-Commit-ID: DVFFdyzY6Kn

UltraBlame original commit: db8466a676a1c98e0ed7de06e07efe6821a04d40

--- a/js/xpconnect/tests/unit/xpcshell.ini
+++ b/js/xpconnect/tests/unit/xpcshell.ini
@@ -45,6 +45,9 @@ js
 component_import
 .
 manifest
+file_simple_script
+.
+js
 importer
 .
 jsm
@@ -281,6 +284,11 @@ test_classesByID_instanceof
 js
 ]
 [
+test_compileScript
+.
+js
+]
+[
 test_deepFreezeClone
 .
 js
@@ -400,19 +408,6 @@ test_localeCompare
 .
 js
 ]
-skip
--
-if
-=
-toolkit
-=
-=
-"
-android
-"
-#
-bug
-1347431
 [
 test_recursive_import
 .
