--- a/dom/base/test/chrome.ini
+++ b/dom/base/test/chrome.ini
@@ -27,6 +27,21 @@ js
 file_bug1008126_worker
 .
 js
+file_inline_script
+.
+html
+file_inline_script
+.
+xhtml
+file_external_script
+.
+html
+file_external_script
+.
+xhtml
+file_script
+.
+js
 mozbrowser_api_utils
 .
 js
@@ -34,6 +49,11 @@ js
 test_anonymousContent_xul_window
 .
 xul
+]
+[
+test_blockParsing
+.
+html
 ]
 [
 test_bug715041
