--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -229,6 +229,11 @@ test_ext_contentscript_api_injection
 html
 ]
 [
+test_ext_contentscript_cache
+.
+html
+]
+[
 test_ext_contentscript_context
 .
 html
