Bug 1345368 - land NSS 37ccb22f8e51, r=me
UltraBlame original commit: 6d17c6eda45faac58ea867c9d03282c21e77f800

--- a/security/nss/gtests/nss_bogo_shim/config.json
+++ b/security/nss/gtests/nss_bogo_shim/config.json
@@ -849,13 +849,24 @@ ALPNClient
 -
 Mismatch
 -
-TLS1
-*
+TLS13
 "
 :
 "
-Bug
-1339418
+NSS
+sends
+alerts
+in
+response
+to
+errors
+in
+protected
+handshake
+messages
+in
+the
+clear
 "
 }
 "
