Bug 1303838 - Switch to existing target tab when clicking links. r=smaug
Merge "DOMServiceWorkerFocusClient" & "DOMWebNotificationClicked"
to "DOMWindowFocus" event. Utilize the event to switch tab when
loading links to an existing target tab.

MozReview-Commit-ID: Hd1NkVkrJA1

UltraBlame original commit: 20537ebcebdb9035ff6950e4fadf7e5e8d922f6b

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -242,6 +242,15 @@ headers
 zoom_test
 .
 html
+file_bug1303838
+.
+html
+file_bug1303838_target
+.
+html
+file_bug1303838_with_iframe
+.
+html
 !
 /
 image
@@ -2679,3 +2688,8 @@ is
 e10s
 -
 only
+[
+browser_bug1303838
+.
+js
+]
