--- a/testing/web-platform/meta/webvtt/parsing/cue-text-parsing/tests/entities.html.ini
+++ b/testing/web-platform/meta/webvtt/parsing/cue-text-parsing/tests/entities.html.ini
@@ -6,6 +6,25 @@ html
 type
 :
 testharness
+disabled
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1307710
 expected
 :
 if
