--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -6620,6 +6620,9 @@ implicitJSContext
 :
 [
 '
+createImageBitmap
+'
+'
 requestIdleCallback
 '
 ]
@@ -6754,6 +6757,15 @@ WorkerScope
 .
 h
 '
+'
+implicitJSContext
+'
+:
+[
+'
+createImageBitmap
+'
+]
 '
 concrete
 '
