Bug 1348174 - Test that deviceIds are stable for same origin and differ across origins. r=jesup
MozReview-Commit-ID: LEkHzgUZwqd

UltraBlame original commit: f60a3d32a6d4f7111d0e92e1393e99f9f656af8e

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -324,6 +324,24 @@ test_enumerateDevices
 html
 ]
 [
+test_enumerateDevices_iframe
+.
+html
+]
+skip
+-
+if
+=
+true
+#
+needed
+by
+test_enumerateDevices
+.
+html
+on
+builders
+[
 test_ondevicechange
 .
 html
