--- a/servo/components/style/Cargo.toml
+++ b/servo/components/style/Cargo.toml
@@ -76,6 +76,9 @@ rayon
 /
 unstable
 "
+"
+num_cpus
+"
 ]
 use_bindgen
 =
@@ -289,6 +292,22 @@ optional
 =
 true
 }
+num_cpus
+=
+{
+version
+=
+"
+1
+.
+1
+.
+0
+"
+optional
+=
+true
+}
 num
 -
 integer
@@ -319,15 +338,6 @@ float
 0
 .
 4
-"
-owning_ref
-=
-"
-0
-.
-2
-.
-2
 "
 parking_lot
 =
