Bug 1347700 - Test async loading of content scripts. r=kmag
UltraBlame original commit: 2a9f685bbf0cbfbb1e2e061e4e48bb8a0f7413df

--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -229,6 +229,11 @@ test_ext_contentscript_api_injection
 html
 ]
 [
+test_ext_contentscript_async_loading
+.
+html
+]
+[
 test_ext_contentscript_cache
 .
 html
