Bug 1328210 - Wrap pointerevent_boundary_events_in_capturing-manual.html in mochitest form. r=smaug
UltraBlame original commit: 1013c29eff9c9ff814df4d7eefe62c7239383319

--- a/dom/events/test/pointerevents/mochitest.ini
+++ b/dom/events/test/pointerevents/mochitest.ini
@@ -81,6 +81,22 @@ iframe
 .
 html
 [
+test_pointerevent_boundary_events_in_capturing
+-
+manual
+.
+html
+]
+support
+-
+files
+=
+pointerevent_boundary_events_in_capturing
+-
+manual
+.
+html
+[
 test_pointerevent_capture_mouse
 -
 manual
