--- a/dom/security/test/csp/mochitest.ini
+++ b/dom/security/test/csp/mochitest.ini
@@ -771,6 +771,18 @@ sjs
 file_punycode_host_src
 .
 js
+file_iframe_srcdoc
+.
+sjs
+file_iframe_sandbox_srcdoc
+.
+html
+file_iframe_sandbox_srcdoc
+.
+html
+^
+headers
+^
 [
 test_base
 -
@@ -1277,6 +1289,16 @@ html
 ]
 [
 test_punycode_host_src
+.
+html
+]
+[
+test_iframe_sandbox_srcdoc
+.
+html
+]
+[
+test_iframe_srcdoc
 .
 html
 ]
