--- a/dom/events/test/pointerevents/mochitest.ini
+++ b/dom/events/test/pointerevents/mochitest.ini
@@ -251,11 +251,56 @@ pointerevent_multiple_primary_pointers_boundary_events
 manual
 .
 html
-disabled
-=
-should
-be
-investigated
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+gfx
+/
+layers
+/
+apz
+/
+test
+/
+mochitest
+/
+apz_test_utils
+.
+js
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+gfx
+/
+layers
+/
+apz
+/
+test
+/
+mochitest
+/
+apz_test_native_event_utils
+.
+js
 [
 test_pointerevent_pointercancel_touch
 -
