--- a/testing/web-platform/meta/html/dom/dynamic-markup-insertion/opening-the-input-stream/010.html.ini
+++ b/testing/web-platform/meta/html/dom/dynamic-markup-insertion/opening-the-input-stream/010.html.ini
@@ -14,6 +14,22 @@ document
 opened
 document
 ]
-expected
+disabled
 :
-FAIL
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1139795
