Bug 1332646 - Intermittent browser/base/content/test/popupNotifications/browser_popupNotification_5.js. disable for now. r=gbrown
MozReview-Commit-ID: JJmkqsGzCzL

UltraBlame original commit: 895956e13af4b75ed178aeb5bb9e30e1a2acb24b

--- a/browser/base/content/test/popupNotifications/browser.ini
+++ b/browser/base/content/test/popupNotifications/browser.ini
@@ -142,22 +142,10 @@ skip
 -
 if
 =
-(
-os
-=
-=
-"
-linux
-"
-&
-&
-(
-debug
-|
-|
-asan
-)
-)
+true
+#
+bug
+1332646
 [
 browser_popupNotification_checkbox
 .
