Backed out changeset b5a2225f267d (bug 1296492)
UltraBlame original commit: b0e32d48f0a7d901bc22d7b1337069dce8261635

--- a/dom/events/test/pointerevents/mochitest.ini
+++ b/dom/events/test/pointerevents/mochitest.ini
@@ -251,56 +251,11 @@ pointerevent_multiple_primary_pointers_boundary_events
 manual
 .
 html
-.
-.
-/
-.
-.
-/
-.
-.
-/
-.
-.
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_utils
-.
-js
-.
-.
-/
-.
-.
-/
-.
-.
-/
-.
-.
-/
-gfx
-/
-layers
-/
-apz
-/
-test
-/
-mochitest
-/
-apz_test_native_event_utils
-.
-js
+disabled
+=
+should
+be
+investigated
 [
 test_pointerevent_pointercancel_touch
 -
