Bug 1346630 - disable test_peerConnection_captureStream_canvas_webgl.html on Mw android 4.2/17, r=dminor.
UltraBlame original commit: 8e6449fb1db9c71fd3407c85c935191fd1e7381e

--- a/testing/mochitest/manifests/autophone-webrtc.ini
+++ b/testing/mochitest/manifests/autophone-webrtc.ini
@@ -1322,6 +1322,19 @@ test_peerConnection_captureStream_canvas_webgl
 .
 html
 ]
+skip
+-
+if
+=
+android_version
+=
+=
+'
+17
+'
+#
+bug
+1346630
 [
 .
 .
