Bug 1347954 - Disable dom/media/test/test_video_to_canvas.html, r=gbrown.
UltraBlame original commit: 87c80eab126b777fe985acf15960608db73f847f

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10313,49 +10313,24 @@ skip
 -
 if
 =
-android_version
+toolkit
 =
 =
 '
-15
-'
-|
-|
-android_version
-=
-=
-'
-17
-'
-|
-|
-(
-android_version
-=
-=
-'
-19
-'
-&
-&
-debug
-)
-|
-|
-android_version
-=
-=
-'
-22
+android
 '
 #
-bug
-1320418
 android
 (
 bug
 1232305
 )
+bugs
+1320418
+1347953
+1347954
+1348140
+1348386
 [
 test_video_in_audio_element
 .
