--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -619,6 +619,11 @@ browser_ext_webNavigation_onCreatedNavigationTarget
 js
 ]
 [
+browser_ext_webNavigation_onCreatedNavigationTarget_contextmenu
+.
+js
+]
+[
 browser_ext_webNavigation_onCreatedNavigationTarget_window_open
 .
 js
