Bug 1344932 - Separate out the ESLint spidermonkey preprocessor to avoid breaking './mach eslint --fix' on the whole tree.' r=jryans
This doesn't allow --fix to run on the whole tree in one go, but does allow it to be run on individual directories. This
is due to an ESLint issue, where once the processor is loaded, it applies to the rest of the files.

MozReview-Commit-ID: Fqg5yK22Dhu

UltraBlame original commit: 27ee69dbbf5a30cfee62bfd966a186e649842135

--- a/tools/lint/eslint/eslint-plugin-spidermonkey-js/package.json
+++ b/tools/lint/eslint/eslint-plugin-spidermonkey-js/package.json
@@ -8,7 +8,9 @@ eslint
 -
 plugin
 -
-mozilla
+spidermonkey
+-
+js
 "
 "
 version
@@ -17,9 +19,9 @@ version
 "
 0
 .
-2
+1
 .
-31
+0
 "
 "
 description
@@ -39,6 +41,7 @@ standard
 in
 the
 Mozilla
+SpiderMonkey
 project
 .
 "
@@ -62,7 +65,7 @@ plugin
 mozilla
 "
 "
-firefox
+spidermonkey
 "
 ]
 "
@@ -127,7 +130,9 @@ eslint
 -
 plugin
 -
-mozilla
+spidermonkey
+-
+js
 .
 html
 "
@@ -169,8 +174,7 @@ author
 "
 :
 "
-Mike
-Ratcliffe
+Mozilla
 "
 "
 main
@@ -188,80 +192,6 @@ dependencies
 "
 :
 {
-"
-escope
-"
-:
-"
-^
-3
-.
-6
-.
-0
-"
-"
-espree
-"
-:
-"
-^
-3
-.
-2
-.
-0
-"
-"
-estraverse
-"
-:
-"
-^
-4
-.
-2
-.
-0
-"
-"
-globals
-"
-:
-"
-^
-9
-.
-14
-.
-0
-"
-"
-ini
--
-parser
-"
-:
-"
-^
-0
-.
-0
-.
-2
-"
-"
-sax
-"
-:
-"
-^
-1
-.
-1
-.
-4
-"
 }
 "
 engines
@@ -280,28 +210,6 @@ node
 9
 .
 1
-"
-}
-"
-scripts
-"
-:
-{
-"
-test
-"
-:
-"
-node
-tests
-/
-test
--
-run
--
-all
-.
-js
 "
 }
 "
