Bug 1316187 - verify that all the chrome files we ship are actually referenced, r=Gijs.
UltraBlame original commit: 009667806d2bf9b3c6bf6583e1c32128d1b7cfce

--- a/browser/base/content/test/static/browser.ini
+++ b/browser/base/content/test/static/browser.ini
@@ -9,6 +9,33 @@ head
 .
 js
 [
+browser_all_files_referenced
+.
+js
+]
+skip
+-
+if
+=
+debug
+#
+no
+point
+in
+running
+on
+both
+opt
+and
+debug
+and
+will
+likely
+intermittently
+timeout
+on
+debug
+[
 browser_misused_characters_in_strings
 .
 js
