--- a/devtools/client/framework/test/browser.ini
+++ b/devtools/client/framework/test/browser.ini
@@ -548,8 +548,8 @@ js
 #
 We
 want
-this
-test
+these
+tests
 to
 run
 for
@@ -561,7 +561,7 @@ well
 so
 we
 include
-it
+them
 here
 :
 [
@@ -591,3 +591,74 @@ browser_parsable_css
 .
 js
 ]
+skip
+-
+if
+=
+debug
+#
+no
+point
+in
+running
+on
+both
+opt
+and
+debug
+and
+will
+likely
+intermittently
+timeout
+on
+debug
+[
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+browser
+/
+base
+/
+content
+/
+test
+/
+static
+/
+browser_all_files_referenced
+.
+js
+]
+skip
+-
+if
+=
+debug
+#
+no
+point
+in
+running
+on
+both
+opt
+and
+debug
+and
+will
+likely
+intermittently
+timeout
+on
+debug
