Bug 1346926 - Make PVRManager::SetHaveEventListener async r=kanru - There appears to be no issues with simply changing   SetHaveEventListener from sync to async.
MozReview-Commit-ID: 3LKgDx9AZnm

UltraBlame original commit: 4ddb3af7cdf809ba0d7d27b62805096d9e870007

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -3202,6 +3202,14 @@ description
 PContent
 :
 :
+ReadPermissions
+]
+description
+=
+[
+PContent
+:
+:
 GetClipboard
 ]
 description
@@ -3275,6 +3283,14 @@ PContent
 :
 :
 EndDriverCrashGuard
+]
+description
+=
+[
+PContent
+:
+:
+OpenAnonymousTemporaryFile
 ]
 description
 =
@@ -3884,14 +3900,6 @@ PVRManager
 :
 :
 GetSensorState
-]
-description
-=
-[
-PVRManager
-:
-:
-SetHaveEventListener
 ]
 description
 =
