Bug 1349456 part 3 - test element become tainted while captured via MozCaptureStream(); r=jwwang
MozReview-Commit-ID: 4nJHwZjZ2zG

UltraBlame original commit: 0dd25f000f10e93b6f37d3c4ae86ef2ab54f9d45

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10827,6 +10827,27 @@ tags
 =
 suspend
 [
+test_background_video_tainted_by_capturestream
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1346705
+tags
+=
+suspend
+[
 test_background_video_tainted_by_drawimage
 .
 html
