Bug 1349459 part 2 - test element as tainted when CreateImageBitmap() is used; r=jwwang
MozReview-Commit-ID: 6zjugUsA4fZ

UltraBlame original commit: 4a8979c4c9df308fa51af4d198bb0ccf770cdede

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -10848,6 +10848,27 @@ tags
 =
 suspend
 [
+test_background_video_tainted_by_createimagebitmap
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+#
+bug
+1346705
+tags
+=
+suspend
+[
 test_background_video_tainted_by_drawimage
 .
 html
