--- a/taskcluster/ci/spidermonkey/kind.yml
+++ b/taskcluster/ci/spidermonkey/kind.yml
@@ -200,6 +200,16 @@ src
 /
 *
 *
+-
+taskcluster
+/
+ci
+/
+spidermonkey
+/
+kind
+.
+yml
 jobs
 :
 sm
@@ -998,3 +1008,46 @@ spidermonkey
 variant
 :
 nonunified
+sm
+-
+fuzzing
+/
+opt
+:
+description
+:
+"
+Spidermonkey
+Fuzzing
+"
+index
+:
+job
+-
+name
+:
+sm
+-
+fuzzing
+treeherder
+:
+platform
+:
+linux64
+/
+opt
+symbol
+:
+SM
+-
+tc
+(
+f
+)
+run
+:
+spidermonkey
+-
+variant
+:
+fuzzing
