Bug 1345422 - Do not hardcode the sfx package and installer path. r=mshal
UltraBlame original commit: 2e22ffe74d4194ca7703e047c0f3ce5f61749360

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -345,6 +345,34 @@ Applications
 /
 '
 endif
+MOZ_SFX_PACKAGE
+=
+(
+topsrcdir
+)
+/
+other
+-
+licenses
+/
+7zstub
+/
+firefox
+/
+7zSD
+.
+sfx
+MOZ_INSTALLER_PATH
+=
+(
+topsrcdir
+)
+/
+browser
+/
+installer
+/
+windows
 ifeq
 (
 WINNT
