Bug 1348801: Test OA of principal when opening link in new private window. r=gijs
UltraBlame original commit: 15eaaf95fb26fcfbd631aba55b076b80ba90661e

--- a/browser/components/privatebrowsing/test/browser/browser.ini
+++ b/browser/components/privatebrowsing/test/browser/browser.ini
@@ -59,6 +59,9 @@ png
 ^
 headers
 ^
+file_triggeringprincipal_oa
+.
+html
 [
 browser_privatebrowsing_DownloadLastDirWithCPS
 .
@@ -227,6 +230,11 @@ js
 ]
 [
 browser_privatebrowsing_blobUrl
+.
+js
+]
+[
+browser_oa_private_browsing_window
 .
 js
 ]
