Bug 1341738 - Implement FetchController and FetObserver - part 1 - FetchController in WebIDL, r=bkelly
UltraBlame original commit: 25d4dfbdd6f967974f8203cc59dda88e95086837

--- a/dom/tests/mochitest/fetch/mochitest.ini
+++ b/dom/tests/mochitest/fetch/mochitest.ini
@@ -8,6 +8,9 @@ files
 fetch_test_framework
 .
 js
+file_fetch_controller
+.
+html
 file_fetch_csp_block_frame
 .
 html
@@ -286,6 +289,11 @@ html
 ]
 [
 test_fetch_basic_http_sw_empty_reroute
+.
+html
+]
+[
+test_fetch_controller
 .
 html
 ]
