Bug 1341738 - Implement FetchController and FetObserver - part 4 - FetchObserver WebIDL, r=bkelly
UltraBlame original commit: 66013464994238b9447d54dca5f70a3053879469

--- a/dom/tests/mochitest/fetch/mochitest.ini
+++ b/dom/tests/mochitest/fetch/mochitest.ini
@@ -29,6 +29,9 @@ js
 test_fetch_cors
 .
 js
+file_fetch_observer
+.
+html
 test_formdataparsing
 .
 js
@@ -362,6 +365,11 @@ Bug
 1210282
 [
 test_fetch_csp_block
+.
+html
+]
+[
+test_fetch_observer
 .
 html
 ]
