Bug 1341738 - Implement FetchController and FetObserver - part 5 - Dispatching observer events, r=bkelly
UltraBlame original commit: 617238ba19880a705d25c80d0ac5da09d376dddc

--- a/dom/tests/mochitest/fetch/mochitest.ini
+++ b/dom/tests/mochitest/fetch/mochitest.ini
@@ -68,6 +68,9 @@ js
 ^
 headers
 ^
+slow
+.
+sjs
 sw_reroute
 .
 js
@@ -84,6 +87,9 @@ worker_temporaryFileBlob
 .
 js
 common_temporaryFileBlob
+.
+js
+worker_fetch_controller
 .
 js
 !
