--- a/browser/base/content/test/tabs/browser.ini
+++ b/browser/base/content/test/tabs/browser.ini
@@ -19,6 +19,11 @@ browser_allow_process_switches_despite_related_browser
 js
 ]
 [
+browser_tabCloseProbes
+.
+js
+]
+[
 browser_tabSpinnerProbe
 .
 js
