Bug 1318791 support internal commands to open actions from context menus, r=kmag
MozReview-Commit-ID: 8haLmxc81BM

UltraBlame original commit: f3fa2acf658b02317057bf7beb20b4f418270da5

--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -224,6 +224,11 @@ browser_ext_contextMenus_chrome
 js
 ]
 [
+browser_ext_contextMenus_commands
+.
+js
+]
+[
 browser_ext_contextMenus_icons
 .
 js
