Bug 1348660 - Part 5: Implement a method to retrieve usage data for all origins at once; r=btseng
UltraBlame original commit: 2c3319501b59c23468e18069268aa5e71d862446

--- a/dom/quota/test/unit/xpcshell.ini
+++ b/dom/quota/test/unit/xpcshell.ini
@@ -71,6 +71,9 @@ zip
 defaultStorageUpgrade_profile
 .
 zip
+getUsage_profile
+.
+zip
 idbSubdirUpgrade1_profile
 .
 zip
@@ -102,6 +105,11 @@ js
 ]
 [
 test_defaultStorageUpgrade
+.
+js
+]
+[
+test_getUsage
 .
 js
 ]
